--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
+    "@tanstack/react-query": "5.90.1",
+    "@tanstack/react-query-devtools": "5.90.1",
     "expo": "~54.0.9",
     "expo-document-picker": "^14.0.7",
     "expo-status-bar": "~3.0.8",
