--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.5",
     "@react-native-picker/picker": "^2.11.2",
     "@react-navigation/drawer": "^7.5.8",
@@ -17,6 +18,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-query": "5.90.1",
     "@tanstack/react-query-devtools": "5.90.1",
+    "axios": "^1.12.2",
     "expo": "~54.0.9",
     "expo-document-picker": "^14.0.7",
     "expo-status-bar": "~3.0.8",
