--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-query": "5.90.1",
     "@tanstack/react-query-devtools": "5.90.1",
+    "axios": "^1.12.2",
     "expo": "~54.0.9",
     "expo-document-picker": "^14.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
     "react-redux": "^9.2.0"
   },
